<resources>
    <string name="app_name">My Shopi Cart</string>
    <string name="action_settings">Setting</string>
    <string name="btnScan">Scan</string>
    <string name="txtbtnBarcode">Lector de Código de Barra</string>
    <string name="bt_finalizar_compra">Finalizar Compra</string>
    <string name="buttonAdminList">Crear lista</string>
    <string name="buttonAddCategoryAdmin">Crear Categoria</string>
    <string name="etPrecioTotal">Precio Total: </string>
    <string name="etNumProT">Total: </string>
    <string name="etPrecioCarrito">Precio Carrito: </string>
    <string name="etNumProCarrito">Carrito: </string>
    <string name="etAnyadir">Añadir</string>
    <string name="etMoney"> € </string>
    <string name="descriptionBtOk">Añadir producto</string>
    <string name="descriptionPhotoBt">Photo Button</string>
    <string name="name_carrito">Carrito</string>

    <!--Despensa-->
    <string name="title_activity_stock_product">Despensa</string>
    <string name="btSalirDespensaOnline">Salir de esta despensa</string>
    <string name="total_productos">Productos totales:</string>


    <!--View Product-->
    <string name="etName">Introduce el name del producto</string>
    <string name="etPrice">Precio</string>
    <string name="etQuantity">Cantidad</string>
    <string name="et_categoria">Categoria</string>
    <string name="et_total">Total:</string>
    <string name="bt_anyadir_listbuy">Añadir</string>
    <string name="todo">TODO</string>
    <string name="et_unidad">Unidad</string>

    <!--menu_product-->
    <string name="Aceptar">Aceptar</string>
    <string name="Borrar">Borrar</string>
    <string name="Cancelar">Cancelar</string>

    <!--permissions-->
    <string name="explication_permissions">La aplicación necesita los
        permiso de poder realizar fotografias a productos y
        poder almacenarlas en la memoria extraible</string>

    <!--menu buy list-->
    <string name="menu_share_buy_list">Compartir</string>
    <string name="menu_save_history">Guardar historial</string>
    <string name="menu_syncronize">Sincronizar</string>
    <string name="menu_admin_category">Administrar Categorias</string>
    <string name="menu_selectAllProductsShoppingList">Marcar todos </string>
    <string name="menu_active_seleccionarTodos">Seleccionar Todos</string>
    <string name="menu_desmarcarAll">Desmarcar todos </string>
    <string name="menu_anyadirAlmacen">Añadir Productos al Almacen</string>
    <string name="menu_deleteAll">Eliminar todos los productos</string>

    <!--mDespensaacen -->
    <string name="menu_borrar_producto">Borrar Producto</string>
    <string name="menu_copiar_producto">Copiar Producto</string>

    <!--ACTIVITY LOGIN-->
    <string name="title_activity_login">Iniciar sesión</string>

    <!--CREATE HISTORIAL-->
    <string name="hint_name_historial">Introduce el lugar de la compra</string>
    <string name="et_fecha_compra">Fecha de compra: </string>
    <string name="et_importe_compra_historial">Importe total de la compra: </string>

    <!--Cambiar contraseña-->
    <string name="change_password_action_change">Cambiar contraseña</string>
    <string name="change_password_new_password">Nueva Contraseña</string>

    <!--Elegir Log o Crear-->
    <string name="create_new_account">Crear nueva cuenta</string>
    <string name="login_account">Iniciar cuenta</string>

    <!--Crear cuenta-->
    <string name="add_create_new_account">Añadir nueva cuenta</string>

    <!-- Strings related to login AND create-->
    <string name="prompt_user">Nombre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>

    <string name="action_sign_in">CREAR CUENTA</string>
    <string name="action_sign_in_short">INICIAR</string>
    <string name="error_this_email_is_add">Esta cuenta ya esta agregada</string>
    <string name="error_invalid_email">Este email es invalido</string>
    <string name="error_this_account_not_exist">Esta cuenta no existe</string>
    <string name="error_this_account_exist">La dirección de correo indicada ya ha sido utilizada en otra cuenta</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>

    <!--Navigate-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- NAVIGATE DRAWER-->
    <string name="title_activity_menu_navigate">menu_navigate</string>
    <string name="navigation_drawer_user_name">Usuario</string>
    <string name="navigation_drawer_user_email">Email</string>
    <string name="navigation_drawer_context_description">Imagen de cuenta de principal</string>
    <string name="nav_title_admin_lista">Listas</string>
    <string name="nav_title_admin_despensa">Despensa</string>
    <string name="nav_title_admin_almacen">Productos</string>
    <string name="nav_title_admin_categorias">Categorias</string>
    <string name="nav_title_admin_historialCompras">Historial Compras</string>
    <string name="nav_title_admin">Administrar</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <!--Preferencias Idioma-->
    <string name="titlleChoseLanguage">Elegir Idioma</string>
    <string name="summaryChoseLanguage">Elige el idoma para la aplicación</string>
    <string name="language_options_default_values">1</string>

    <!--Historial Compras View -->
    <string name="Ubicacion">Nombre:</string>
    <string name="Fecha">Fecha:</string>
    <string name="NombreProdHC">Nombre</string>
    <string name="CantidadHC">Cantidad</string>
    <string name="PrecioHC">Precio</string>
    <string name="Importe_total">Improte total:</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="title_activity_settings">Ajustes</string>

    <!--usuarios con los que has compartido la lista-->
    <string name="title_admin_usuarios">Compartir</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="title_activity_login_2">Login</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

    <!-- Example settings for Data & Sync -->
    <!--  <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!-- Example settings for Notifications -->
    <!--  <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>-->


</resources>
